--- a/app/views/blogs/edit.html.slim
+++ b/app/views/blogs/edit.html.slim
@@ -3,14 +3,14 @@ h1 編集
 = form_for @blog do |f|
 
     p
-        = f.label :タイトル
+        = f.label :title, "タイトル"
         br
         = f.text_field :title
         
         
         
     p
-        = f.label :本文
+        = f.label :content, "本文"
         br
         = f.text_area :content, cols: 70, rows: 12
     
