--- a/app/views/blogs/index.html.slim
+++ b/app/views/blogs/index.html.slim
@@ -11,7 +11,7 @@ ul
     - @blogs.each do |blog|
         li
             = link_to blog.title, blog_path(blog.id)
-            = link_to " --[編集]", edit_blog_path(blog.id)
+            = link_to " [編集]", edit_blog_path(blog.id)
             = link_to "[削除]", blog_path(blog.id), method: :delete, data:{　confirm: "本当に削除しますか？"}
             
 p
