--- a/app/views/blogs/new.html.slim
+++ b/app/views/blogs/new.html.slim
@@ -3,16 +3,23 @@ h1 新規投稿
 = form_for @blog do |f|
 
     p
-        = f.label :タイトル
+        = f.label :title, "タイトル"
         br
         = f.text_field :title
         
+        - if @blog.errors.any?
+            = @blog.errors.messages[:title][0]    
         
         
+    
     p
-        = f.label :本文
+        = f.label :content, "本文"
         br
         = f.text_area :content, cols: 70, rows: 12
+    
+        - if @blog.errors.any?
+            = @blog.errors.messages[:content][0] 
+    
     
     p
         = f.submit
