--- a/app/views/blogs/show.html.slim
+++ b/app/views/blogs/show.html.slim
@@ -31,14 +31,21 @@ h3 コメント追加
 = form_for( [@blog, @blog.comments.build] ) do |f|
 
     p
-        = f.label :投稿者
+        = f.label :commenter, "投稿者"
         br
         = f.text_field :commenter
         
+        - if @blog.errors.any?
+            = @blog.errors.messages[:commenter][0]    
+        
     p
-        = f.label :コメント本文
+        = f.label :body, "コメント"
         br
         = f.text_area :body, cols: 70, rows: 12
+        
+        - if @blog.errors.any?
+            = @blog.errors.messages[:body][0] 
+        
         
     p
         = f.submit
