--- a/app/views/blogs/show.html.slim
+++ b/app/views/blogs/show.html.slim
@@ -28,23 +28,23 @@ h2 コメント
 
 h3 コメント追加
 
-= form_for( [@blog, @blog.comments.build] ) do |f|
+= form_for( [@blog, @comment] ) do |f|
 
     p
         = f.label :commenter, "投稿者"
         br
         = f.text_field :commenter
         
-        - if @blog.errors.any?
-            = @blog.errors.messages[:commenter][0]    
+        - if @comment.errors.any?
+            = @comment.errors.messages[:commenter][0]    
         
     p
         = f.label :body, "コメント"
         br
         = f.text_area :body, cols: 70, rows: 12
         
-        - if @blog.errors.any?
-            = @blog.errors.messages[:body][0] 
+        - if @comment.errors.any?
+            = @comment.errors.messages[:body][0]
         
         
     p
